feat: 인증 프로세스 개선 및 비밀번호 찾기 기능 추가
- request_code 메서드에 user_exists 필드 추가
- reset_password 엔드포인트 구현
- Swagger 문서 업데이트
- 라우트 추가
